# CyberBull

./: .gitignore  README.md
backend-cpp/: .gitignore  CMakeLists.txt  Dockerfile
backend-cpp/src/: decrypt.cpp  decrypt.h  dummy.cpp  dummy.h  encrypt.cpp  encrypt.h  main.cpp  util.cpp  util.h
backend-python/: Dockerfile  requirements.txt
backend-python/app/: main.py  scanner.py  sniffer.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/debug/: route.ts
frontend/src/app/api/proxy/cpp/: route.ts
frontend/src/app/api/proxy/py/: route.ts
frontend/src/app/decrypt/: page.tsx
frontend/src/app/encrypt/: page.tsx
frontend/src/app/get-started/: page.tsx
frontend/src/app/learn-more/: page.tsx
frontend/src/app/scanner/: page.tsx
frontend/src/app/sniffer/: page.tsx
frontend/src/components/: Footer.tsx  Logo.tsx  MovingBackground.tsx  Navbar.tsx  NetworkNodes.tsx  SpiralDragon.tsx
